# RTX-2090-TiFy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  packapp.bat
RTX-2090/: Configurations.cpp  Configurations.hpp  CorgiAlgorithm.cpp  CorgiAlgorithm.hpp  IProgressBar.hpp  ImageHandler.cpp  RTX2090Ti.cpp  RTX2090Ti.hpp  Video.hpp
config/: .gitignore  AppProps.h.in
inc/: AboutApp.hpp  AppConfig.hpp  AppConstants.h  Configurations.hpp  CorgiAlgorithm.hpp  Events.hpp  ImageHandler.hpp  ImageUtils.hpp  MyApp.hpp  MyFrame.hpp  RTX2090Ti.hpp  Video.hpp
scripts/: packapp.bat
src/: AboutApp.cpp  AboutApp.hpp  AppConfig.cpp  AppConfig.hpp  Configurations.cpp  Configurations.hpp  CorgiAlgorithm.cpp  CorgiAlgorithm.hpp  Events.cpp  Events.hpp  ImageHandler.cpp  ImageHandler.hpp  ImageUtils.cpp  MyApp.cpp  MyApp.hpp  MyFrame.cpp  MyFrame.hpp  RTX2090Ti.cpp  RTX2090Ti.hpp  Video.cpp  main.cpp
wxWidgets/: AboutApp.hpp  AppConfig.cpp  ConfigAdapter.cpp  ConfigAdapter.hpp  MyFrame.cpp  MyFrame.hpp  ProgressBar.cpp  ProgressBar.hpp
